--- a/index.html
+++ b/index.html
@@ -12,13 +12,26 @@
             padding: 0;
         }
         header {
-            background-color: #0056b3;
+            background-color: #6f2c91; /* Dark purple */
             padding: 20px;
             color: white;
+            text-align: center;
         }
         h1 {
             margin: 0;
             font-size: 2.5em;
+        }
+        .hero {
+            background-image: url('https://via.placeholder.com/1200x400'); /* Placeholder image */
+            background-size: cover;
+            color: white;
+            text-align: center;
+            padding: 100px 20px;
+            background-color: #8e44ad; /* Medium purple */
+        }
+        .hero h2 {
+            font-size: 2.2em;
+            margin-bottom: 20px;
         }
         .content {
             margin: 50px auto;
@@ -33,8 +46,21 @@
             color: #333;
             line-height: 1.5;
         }
+        .features {
+            display: flex;
+            justify-content: space-around;
+            margin: 50px 0;
+        }
+        .feature {
+            background-color: #e9ecef; /* Light gray for feature boxes */
+            padding: 20px;
+            border-radius: 8px;
+            width: 30%;
+            text-align: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
         button {
-            background-color: #28a745;
+            background-color: #9b59b6; /* Purple button */
             color: white;
             border: none;
             padding: 15px 30px;
@@ -42,15 +68,18 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s;
+            display: block;
+            margin: 20px auto;
         }
         button:hover {
-            background-color: #218838;
+            background-color: #8e44ad; /* Darker purple on hover */
         }
         footer {
             margin-top: 50px;
             padding: 20px;
-            background-color: #0056b3;
+            background-color: #6f2c91; /* Dark purple */
             color: white;
+            text-align: center;
         }
     </style>
 </head>
@@ -59,14 +88,18 @@
         <h1>WinWin</h1>
     </header>
 
-    <div class="content">
-        <p>Provide retail investors in Australia with the opportunity to invest in mortgage offset accounts, empowering them to diversify their investment portfolio and achieve financial goals.</p>
-        <button>Learn More</button>
+    <div class="hero">
+        <h2>Empower Your Investments</h2>
+        <p>Invest in mortgage offset accounts and diversify your portfolio.</p>
+        <button>Get Started</button>
     </div>
 
-    <footer>
-        <p>&copy; 2024 WinWin. All rights reserved.</p>
-    </footer>
-</body>
-</html>
-
+    <div class="content">
+        <h2>Why Choose WinWin?</h2>
+        <p>Provide retail investors in Australia with the opportunity to invest in mortgage offset accounts, empowering them to diversify their investment portfolio and achieve financial goals.</p>
+        
+        <div class="features">
+            <div class="feature">
+                <h3>Diversify Your Portfolio</h3>
+                <p>Invest in innovative financial solutions that meet your needs.</p>
+       
