--- a/index.html
+++ b/index.html
@@ -21,18 +21,6 @@
             margin: 0;
             font-size: 2.5em;
         }
-        .hero {
-            background-image: url('https://via.placeholder.com/1200x400'); /* Placeholder image */
-            background-size: cover;
-            color: white;
-            text-align: center;
-            padding: 100px 20px;
-            background-color: #8e44ad; /* Medium purple */
-        }
-        .hero h2 {
-            font-size: 2.2em;
-            margin-bottom: 20px;
-        }
         .content {
             margin: 50px auto;
             max-width: 800px;
@@ -58,6 +46,22 @@
             width: 30%;
             text-align: center;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .benefits, .testimonials, .key-features {
+            margin: 50px 0;
+        }
+        .benefit, .testimonial, .key-feature {
+            margin-bottom: 15px;
+        }
+        .benefit::before, .key-feature::before {
+            content: '✔'; /* Checkmark */
+            color: #28a745; /* Green color */
+            font-size: 1.5em;
+            margin-right: 10px;
+        }
+        .testimonial {
+            font-style: italic;
+            margin: 20px 0;
         }
         button {
             background-color: #9b59b6; /* Purple button */
@@ -89,9 +93,7 @@
     </header>
 
     <div class="hero">
-        <h2>Empower Your Investments</h2>
-        <p>Invest in mortgage offset accounts and diversify your portfolio.</p>
-        <button>Get Started</button>
+        <!-- Hero section content removed -->
     </div>
 
     <div class="content">
@@ -102,4 +104,50 @@
             <div class="feature">
                 <h3>Diversify Your Portfolio</h3>
                 <p>Invest in innovative financial solutions that meet your needs.</p>
-       
+            </div>
+            <div class="feature">
+                <h3>Expert Guidance</h3>
+                <p>Our team provides personalized investment strategies.</p>
+            </div>
+            <div class="feature">
+                <h3>Secure Investments</h3>
+                <p>Your investments are backed by trusted financial practices.</p>
+            </div>
+        </div>
+
+        <h2>Key Benefits</h2>
+        <div class="benefits">
+            <div class="benefit">Maximized Returns. Earn higher profits than standard savings.</div>
+            <div class="benefit">Reduced Mortgage Interest. Save money on your mortgage repayments.</div>
+            <div class="benefit">Diversified Portfolio. Spread investment risk across assets.</div>
+            <div class="benefit">Secure Investments. Stable returns in a regulated market.</div>
+        </div>
+
+        <h2>Testimonials</h2>
+        <div class="testimonials">
+            <div class="testimonial">"OffsetVest made investing simple and rewarding." - Steve from Sydney</div>
+            <div class="testimonial">"Finally, an opportunity to grow my wealth with low risk." - Anna from Melbourne</div>
+            <div class="testimonial">"I trust OffsetVest for consistent returns and transparency." - Daniel from Brisbane</div>
+        </div>
+
+        <h2>Key Features</h2>
+        <div class="key-features">
+            <div class="key-feature">Easy Investment. Seamless process to invest in mortgage offsets.</div>
+            <div class="key-feature">Real-time Tracking. Monitor your investments and returns live.</div>
+            <div class="key-feature">Expert Guidance. Access professional advice on investment strategies.</div>
+            <div class="key-feature">Flexible Withdrawals. Easily liquidate investments when needed.</div>
+        </div>
+
+        <h2>Start Investing Today</h2>
+        <p>Join OffsetVest and unlock your investment potential.</p>
+        <button>Invest Today</button>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 WinWin. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+
+
+
